bk_ida/gccida/c0/c_lex
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/c-lex.c:1233:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *tok; // [rsp+10h] [rbp-10h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/c-lex.c:1237:15: error: use of undeclared identifier 'TV_CPP_0'; did you mean 'TV_CPP'?
timevar_push( TV_CPP_0); 
              ^~~~~~~~
              TV_CPP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/timevar.def:50:13: note: 'TV_CPP' declared here
DEFTIMEVAR (TV_CPP                   , "preprocessing")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/c-lex.c:1241:14: error: use of undeclared identifier 'TV_CPP_0'; did you mean 'TV_CPP'?
timevar_pop( TV_CPP_0); 
             ^~~~~~~~
             TV_CPP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/timevar.def:50:13: note: 'TV_CPP' declared here
DEFTIMEVAR (TV_CPP                   , "preprocessing")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/c-lex.c:1263:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[tok->val.c] & 0xAC) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_lex/src/obj/c-lex.o] Error 1
